Naming of Interfaces according to methods used